build_err_now.txt
[DEBUG build_start] Build function started (session: A)
[DEBUG target_optimize_setup] Target and optimize options set (session: A)
[DEBUG build_complete] Build function completed successfully (session: A)
install
+- install nyon_editor
   +- compile exe nyon_editor Debug native 7 errors
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\fmt.zig:653:89: error: unable to resolve comptime value
pub inline fn comptimePrint(comptime fmt: []const u8, args: anytype) *const [count(fmt, args):0]u8 {
                                                                                        ^~~~
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\fmt.zig:653:70: note: function return type must be comptime-known
pub inline fn comptimePrint(comptime fmt: []const u8, args: anytype) *const [count(fmt, args):0]u8 {
                                                                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\property_inspector.zig:176:74: note: generic function instantiated here
                current_y = self.drawPropertyHeader(std.fmt.comptimePrint("Type: {s}", .{collider_type}), x, current_y, width);
                                                    ~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
referenced by:
    render: src\property_inspector.zig:92:62
    render: src\editor\main_editor.zig:334:47
    5 reference(s) hidden; use '-freference-trace=7' to see all references
src\editor\main_editor.zig:692:19: error: root source file struct 'raylib_stub' has no member named 'drawModel'
            raylib.drawModel(model, raylib.Vector3{ .x = 0, .y = 0, .z = 0 }, 1.0, raylib.Color.white);
            ~~~~~~^~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
const std = @import("std");
^~~~~
src\editor\material_node_editor.zig:160:44: error: expected type '[]const u8', found '[*]const u8'
                raylib.drawText(output.name.ptr, @intFromFloat(node.position.x + 170 - @as(f32, @floatFromInt(text_width))), @intFromFloat(output_y - 6), 12, raylib.Color.light_gray);
                                ~~~~~~~~~~~^~~~
src\raylib_stub.zig:472:23: note: parameter type declared here
pub fn drawText(text: []const u8, posX: c_int, posY: c_int, fontSize: c_int, color: Color) void {
                      ^~~~~~~~~~
src\property_inspector.zig:203:25: error: member function expected 4 argument(s), found 5
        current_y = self.drawFloatProperty("Height", 2.0, x, current_y, width);
                    ~~~~^~~~~~~~~~~~~~~~~~
src\property_inspector.zig:312:5: note: function declared here
    fn drawFloatProperty(_: *PropertyInspector, name: []const u8, x: f32, y: f32, width: f32) f32 {
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\property_inspector.zig:218:25: error: member function expected 4 argument(s), found 5
        current_y = self.drawFloatProperty("Roughness", 0.5, x, current_y, width);
                    ~~~~^~~~~~~~~~~~~~~~~~
src\property_inspector.zig:312:5: note: function declared here
    fn drawFloatProperty(_: *PropertyInspector, name: []const u8, x: f32, y: f32, width: f32) f32 {
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\property_inspector.zig:240:25: error: member function expected 4 argument(s), found 5
        current_y = self.drawFloatProperty("Range", 10.0, x, current_y, width);
                    ~~~~^~~~~~~~~~~~~~~~~~
src\property_inspector.zig:312:5: note: function declared here
    fn drawFloatProperty(_: *PropertyInspector, name: []const u8, x: f32, y: f32, width: f32) f32 {
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\property_inspector.zig:291:30: error: expected type '[]const u8', found '[*]const u8'
        raylib.drawText(value.ptr, @intFromFloat(value_rect.x + 5), @intFromFloat(value_rect.y + 2), 12, raylib.Color.white);
                        ~~~~~^~~~
src\raylib_stub.zig:472:23: note: parameter type declared here
pub fn drawText(text: []const u8, posX: c_int, posY: c_int, fontSize: c_int, color: Color) void {
                      ^~~~~~~~~~
error: 7 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\zig.exe" build-exe -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mroot=C:\\Users\\donald\\nyon-game\\src\\editor.zig" "-Mraygui=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" "-Mzglfw=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyon-game\\src\\root.zig" -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name nyon_editor --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\lib\\" --listen=-

Build Summary: 2/5 steps succeeded (1 failed)
install transitive failure
+- install nyon_editor transitive failure
   +- compile exe nyon_editor Debug native 7 errors

error: the following build command failed with exit code 1:
.zig-cache\o\3b16da357b4d135e40ddce89d3397520\build.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\zig.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib C:\Users\donald\nyon-game .zig-cache C:\Users\donald\AppData\Local\zig --seed 0x87976e7e -Z5a2bcd75a6845139 -j1
